main/default/objects/Simulation_Line_Item__c/Simulation_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Line item of Simulation__c record.</description>
    <label>Simulation Line Item</label>
    <nameField>
        <label>Simulation Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>