main/default/objects/Simulation_Line_Item__c/fields/Forecasted_Value__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Value__c</fullName>
    <label>Forecasted Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>