main/default/objects/Simulation_Line_Item__c/fields/Simulation__c.field-meta.xml
<CustomField>
    <fullName>Simulation__c</fullName>
    <label>Simulation</label>
    <referenceTo>Simulation__c</referenceTo>
    <relationshipLabel>Simulation Line Items</relationshipLabel>
    <relationshipName>Simulation_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>