main/default/objects/Simulation_Line_Item__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <label>YearMonth</label>
    <length>7</length>
    <type>Text</type>
</CustomField>